--- a/system_huellitas/package.json
+++ b/system_huellitas/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.2",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "vanilla-text-mask": "^5.1.1"
   }
 }
